<resources>
    <string name="app_name">xma</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Jane Doe</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--This is for the navigation panel    -->
    <string name="menu_home">Home</string>
    <string name="menu_new_log">Log Symptoms</string>
    <string name="menu_graphs">Data Analysis</string>
    <string name="menu_settings">Settings</string>

    <string name="button_profile">Profile</string>
    <string name="button_location">Location Services</string>
    <string name="button_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="more_details">More Details</string>
    <string name="inflammation_side">Which side of the body is the inflammation?</string>
    <string name="inflammation_severity">How severe is the inflammation?</string>
    <string name="treatment">Did you use treatment?</string>
    <string name="notes">\t Notes</string>
    <string name="location">\t Location</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="save_log">Save Log</string>
    <string name="current_city_hint">Enter your current city</string>
    <string name="date">%1$s</string>DateFormat.getDateInstance(DateFormat.SHORT).format(date)
    <string name="title_activity_graph">GraphActivity</string>
    <string name="treatment_prompt">Select Treatment</string>
  
    <string name="select_your_treatment">Select your treatment</string>

    <!--Notifications-->
    <string name="fragment_notifications">Notifications</string>
    <string name="fragment_allow_notifications">Allow notifications</string>
    <string name="fragment_alert_time">Alert Time</string>
    <string name="fragment_repeat">Reminder Notification</string>
    <string name="attachment_summary_on">Automatically send reminder if log not entered</string>
    <string name="attachment_summary_off">Never send a reminder notification to enter log</string>
    <string name="channel_name">Reminders</string>
    <string name="channel_description">Daily Log Reminders</string>
    
    <!--Profile-->
    <string name="fragment_name">Name: </string>
    <string name="fragment_email">Email: </string>
    <string name="fragment_birth">Birth date: </string>
    <string name="name_hint">Enter name here</string>
    <string name="email_hint">Enter email here</string>
    <string name="birth_hint">Enter birthday here</string>

    <!--Location-->
    <string name="allow_location">Allow Location Services</string>
    <string name="next">Next</string>
    <string name="title_activity_settings2">Settings</string>
    <string name="location_sum_on">Allow app to automatically use location</string>
    <string name="location_sum_off">Manually enter location when prompted</string>


    
</resources>
