<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/button_profile" app:icon="@drawable/ic_person">
        <EditTextPreference
            app:key="name"
            app:title="@string/fragment_name"
            app:useSimpleSummaryProvider="true"
            android:dialogTitle="@string/name_hint"/>
        <EditTextPreference
            app:key="email"
            app:title="@string/fragment_email"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>


    <PreferenceCategory app:title="@string/fragment_notifications" app:icon="@drawable/ic_notifications">

        <SwitchPreferenceCompat

            app:key="notifications"
            app:title="@string/fragment_allow_notifications" />
        <SwitchPreference
            app:key="alert"
            app:title="@string/fragment_repeat"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:dependency="notifications"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/button_location" app:icon="@drawable/ic_locations">
        <SwitchPreference
            app:key="location"
            app:title="@string/allow_location" />
<!--            <intent-->
<!--                android:action="android.intent.action.VIEW"-->
<!--                />-->
<!--        </SwitchPreference>-->
    </PreferenceCategory>




</PreferenceScreen>
