<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/newLog"
            android:icon="@drawable/ic_menu_new"
            android:title="@string/menu_new_log" />
        <item
            android:id="@+id/nav_graphs"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/menu_graphs" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_setting"
            android:title="@string/menu_settings" />

        <item
            android:id = "@+id/nav_more_details_symptoms"
            android:title="@string/more_details" />

        
    </group>

</menu>
