<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.eczema_app.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/newLog"
        android:name="com.example.eczema_app.ui.log.LogFragment"
        android:label="@string/menu_new_log"
        tools:layout="@layout/fragment_new_log" />

    <fragment
        android:id="@+id/nav_graphs"
        android:name="com.example.eczema_app.ui.graphs.GraphsFragment"
        android:label="@string/menu_graphs"
        tools:layout="@layout/fragment_graphs" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.eczema_app.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id = "@+id/nav_more_details_symptoms"
        android:name="com.example.eczema_app.ui.log.MoreDetailsSymptomsFragment"
        android:label="More Details"
        tools:layout="@layout/fragment_more_details_symptoms"/>

</navigation>
