<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/name"
        android:layout_width="153dp"
        android:layout_height="wrap_content"
        android:text="@string/fragment_name"
        app:fontFamily="@font/assistant_bold"
        app:layout_constraintBottom_toTopOf="@+id/enter_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/birth_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_birth"
        app:fontFamily="@font/assistant_bold"
        app:layout_constraintBottom_toTopOf="@+id/enter_birth"
        app:layout_constraintEnd_toEndOf="@+id/enter_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/enter_name" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_email"
        app:fontFamily="@font/assistant_bold"
        app:layout_constraintBottom_toTopOf="@+id/editText4"
        app:layout_constraintEnd_toEndOf="@+id/enter_birth"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/enter_birth" />

    <EditText
        android:id="@+id/enter_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/birth_date"
        app:layout_constraintStart_toStartOf="@+id/name" />

    <EditText
        android:id="@+id/enter_birth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:hint="@string/birth_hint"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="@+id/birth_date"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/enter_name" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="324dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/enter_birth" />


</androidx.constraintlayout.widget.ConstraintLayout>

<!--    <?xml version="1.0" encoding="utf-8"?>-->
<!--<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--xmlns:tools="http://schemas.android.com/tools"-->
<!--android:id="@+id/drawer_layout"-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="match_parent"-->
<!--android:fitsSystemWindows="true"-->
<!--tools:openDrawer="start">-->

<!--<include-->
<!--    layout="@layout/app_bar_main"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent" />-->

<!--<com.google.android.material.navigation.NavigationView-->
<!--    android:id="@+id/nav_view"-->
<!--    android:layout_width="wrap_content"-->
<!--    android:layout_height="match_parent"-->
<!--    android:layout_gravity="start"-->
<!--    android:fitsSystemWindows="true"-->
<!--    app:headerLayout="@layout/nav_header_main"-->
<!--    app:menu="@menu/activity_main_drawer" />-->

<!--</androidx.drawerlayout.widget.DrawerLayout>-->