<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_profile"
        android:layout_width="356dp"
        android:layout_height="57dp"
        android:layout_marginTop="36dp"
        android:background="#F1F8FC"
        android:text="@string/button_profile"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="18sp"
        app:fontFamily="@font/assistant_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_notifications"
        android:layout_width="356dp"
        android:layout_height="57dp"
        android:layout_marginTop="8dp"
        android:background="#F1F8FC"
        android:text="@string/button_notifications"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="18sp"
        app:fontFamily="@font/assistant_bold"
        app:layout_constraintEnd_toEndOf="@+id/button_profile"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button_profile"
        app:layout_constraintTop_toBottomOf="@+id/button_profile" />

    <Button
        android:id="@+id/button_location"
        android:layout_width="356dp"
        android:layout_height="57dp"
        android:layout_marginBottom="360dp"
        android:background="#F1F8FC"
        android:text="@string/button_location"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="18sp"
        app:fontFamily="@font/assistant_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_notifications"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button_notifications"
        app:layout_constraintTop_toBottomOf="@+id/button_notifications"
        app:layout_constraintVertical_bias="0.25" />

</androidx.constraintlayout.widget.ConstraintLayout>