<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/allow_notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/fragment_allow_notifications"
        android:textSize="18sp"
        app:fontFamily="@font/assistant_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/allow_notifications"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.924"
        app:layout_constraintStart_toEndOf="@+id/allow_notifications"
        app:layout_constraintTop_toTopOf="@+id/allow_notifications" />

    <TextView
        android:id="@+id/fragment_repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="400dp"
        android:text="@string/fragment_repeat"
        android:textSize="18sp"
        app:fontFamily="@font/assistant_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="invisible"/>

    <Switch
        android:id="@+id/repeat_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_repeat"
        app:layout_constraintStart_toEndOf="@+id/fragment_repeat"
        app:layout_constraintTop_toTopOf="@+id/fragment_repeat"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/enter_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintBottom_toTopOf="@+id/fragment_repeat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/alert_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_alert_time"
        android:textSize="18sp"
        app:fontFamily="@font/assistant_bold"
        app:layout_constraintBottom_toTopOf="@+id/enter_alert"
        app:layout_constraintStart_toStartOf="@+id/enter_alert"
        app:layout_constraintTop_toBottomOf="@+id/allow_notifications"
        app:layout_constraintVertical_bias="0.86" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/fragment_repeat"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/fragment_repeat"
        app:layout_constraintTop_toBottomOf="@+id/fragment_repeat"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>